--- a/README.Rmd
+++ b/README.Rmd
@@ -16,6 +16,7 @@ knitr::opts_chunk$set(
 # newpack
 
 <!-- badges: start -->
+[![R-CMD-check](https://github.com/hookoop/newpack/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/hookoop/newpack/actions/workflows/R-CMD-check.yaml)
 <!-- badges: end -->
 
 The goal of newpack is to make splitting a string easier.
