--- a/README.Rmd
+++ b/README.Rmd
@@ -19,7 +19,7 @@ knitr::opts_chunk$set(
 [![R-CMD-check](https://github.com/hookoop/newpack/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/hookoop/newpack/actions/workflows/R-CMD-check.yaml)
 <!-- badges: end -->
 
-The goal of newpack is to make splitting a string easier.
+The goal of newpack is to make splitting a string easier.Based on R Packages (2e) by Hadley Wickham and Jennifer Bryan. 
 
 ## Installation
 
